# bancorn

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  Makefile  README.md  app.py  docker-compose.yaml  pyproject.toml
.github/workflows/: ci-staging.yml  ci.yml  criar-tag-artefatos.yml  develop.yml  docker-build-push.yml  production.yml  tag-artefatos.yml  testes-analise.yml
app/: pyproject.toml
app/config/: database.py
app/controller/: conta_controller.py
app/domain/: agencia_bancaria.py  conta.py  conta1.py  conta_bonus.py  conta_poupanca.py  erros_except.py  excecoes.py
app/dto/: conta_dto.py
app/migrations/: 0001_criar_tabela_agencias.rollback.sql  0001_criar_tabela_agencias.sql  0002_criar_tabela_contas.sql  0003_criar_tabela_operacoes.rollback.sql  0003_criar_tabela_operacoes.sql
app/repository/: conta_repository.py  conta_repository_interface.py  operacao_repository.py  operacao_repository_interface.py
app/service/: conta_service.py
app/tests/mock/: fake_conta_repository.py  fake_operacao_repository.py
app/tests/service/: test_conta_service.py
app/views/: acessar_conta.py  depositar.py  formulario_conta.py  main.py  menu_principal.py  sacar.py  tela_conta.py  transferir.py
app/views/forms/: acessar_conta.py  cadastrar_conta.py  depositar.py  sacar.py  transferir.py
app/views/menus/: menu_conta.py  menu_principal.py
config/: database.py
controller/: conta_controller.py
domain/: agencia_bancaria.py  conta.py  conta_bonus.py  conta_poupanca.py  excecoes.py
dto/: conta_dto.py
infra/scripts/: gerar_tag.sh  gerar_tag_rc.sh  gerar_tag_rel.sh
migrations/: 0001_criar_tabela_agencias.sql  0002_criar_tabela_contas.rollback.sql  0002_criar_tabela_contas.sql  0003_criar_tabela_operacoes.sql
repository/: conta_repository.py  conta_repository_interface.py  operacao_repository.py  operacao_repository_interface.py
service/: conta_service.py
tests/mock/: fake_conta_repository.py  fake_operacao_repository.py
tests/service/: test_conta_service.py
views/: main.py  style.tcss
views/componentes/: input_dinheiro.py
views/forms/: acessar_conta.py  cadastrar_conta.py  depositar.py  sacar.py  transferir.py
views/menus/: menu_conta.py  menu_principal.py
